--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url(css/magnific-popup.css);
 @import url(css/default-assets/audioplayer.css);
 @import url(css/font-awesome.min.css);
+
 .people-img {
   border-radius: 10px;
   filter: sepia(0%);
@@ -17,6 +18,9 @@
 }
 
 @media only screen and (max-width: 575px) {
+  #hh {
+    font-size: 15px;
+  }
   .people-img {
     display: block;
     margin-left: auto;
@@ -60,7 +64,7 @@ html {
 
 @media (max-width: 600px) {
 .welcome-text {
-  margin-top: 10%; 
+  margin-top: 15%; 
 }
 }
 
