--- a/testimonial/assets/css/style.css
+++ b/testimonial/assets/css/style.css
@@ -7,7 +7,6 @@
 	filter: saturate(180%);
 }
 
-
 .btn {
 	font-family: "Yekan";
 	margin-top: 0.6%;
@@ -65,7 +64,7 @@ img { max-width: 100%; }
 .divider-1 { padding: 25px 0 15px 0; }
 .divider-1 .line { width: 200px; margin: 0 auto; border-bottom: 1px solid #ddd; }
 
-.testimonials-container { padding-bottom: 70px; }
+.testimonials-container { padding-bottom: ; }
 
 .testimonial-list { margin-top: 30px; text-align: center; }
 
