--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 @import url(css/default-assets/audioplayer.css);
 @import url(css/font-awesome.min.css);
 
+#background {
+  background:linear-gradient(90deg, rgba(139,40,38,1) 0%, rgba(253,29,29,1) 100%, rgba(252,176,69,1) 100%);
+}
+
 .people-img {
   border-radius: 10px;
   filter: sepia(0%);
