--- a/testimonial/assets/css/style.css
+++ b/testimonial/assets/css/style.css
@@ -3,6 +3,11 @@
 	src: url(../../../fonts/Yekan.ttf);
   }
 
+#background {
+	background: rgb(139,40,38);
+	background: linear-gradient(90deg, rgba(139,40,38,1) 0%, rgba(253,29,29,1) 100%, rgba(252,176,69,1) 100%);
+}
+
 #img-1 {
 	filter: saturate(180%);
 }
