--- a/testimonial/assets/css/style.css
+++ b/testimonial/assets/css/style.css
@@ -78,8 +78,8 @@ img { max-width: 100%; }
 	-moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
 }
 
-.testimonial-list .testimonial-text { margin-top: 30px; }
-.testimonial-list .testimonial-text p { padding:5px; opacity: 0.8;text-rendering: optimizeSpeed;line-height: 24px; }
+.testimonial-list .testimonial-text { margin-top: 30px; font-size: 14px;}
+.testimonial-list .testimonial-text p { padding:5px; opacity: 0.8; text-rendering: optimizeSpeed; line-height: 24px; }
 
 
 .testimonial-list .testimonial-text a { color: #fff;border-bottom: 1px dotted #fff;width: 100%;}
